# adv-doc-analyzer

./: .env.example  .gitignore  Dockerfile  LICENSE  en-US.md  main.py  pyproject.toml  readme.md  requirements.txt  test_docintell.py
.github/workflows/: master_ada-hub.yml
DocuMiner/: DocMiner.py  DocMinerGraphModel.py  DocMinerPreprocess.py  docminer_sample_test.ipynb  document_miner.ipynb  sampleDocs.json
app/: ProcessStage.py  RedLineAgent.py  app.py  chainlit.md  chainlit_app.py  demo101.ipynb  document.py  docx.ipynb  examiner.ipynb  metadatamanager.py  preprocess.py  requirements.txt  template.env  utils.py
linked_docs_v0/: Plan for Model Training Using Azure Machine Learning Service_V0.docx  Planning Model Training Using Computer Vision v0.docx  Project Data Science Project for Remote Desktop Surveillance_v0.docx  Project Specification for AI Deployment Phase.docx
linked_docs_v1/: Project Data Science Project for Remote Desktop Surveillance_v1.docx
sample_docs/: gold.docx  test.docx  ~$test2.docx
