[project]
name = "adv-doc-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-documentintelligence==1.0.0b3",
    "azure-data-tables==12.5.0",
    "azure-identity==1.14.0",
    "azure-search-documents==11.4.0",
    "azure-storage-blob==12.17.0",
    "bayoo-docx==0.2.20",
    "chainlit==1.1.306",
    "langchain==0.2.2",
    "langchain-community==0.2.4",
    "langchain-core==0.2.4",
    "langchain-openai==0.1.8",
    "openai==1.26.0",
    "python-dotenv==1.0.0",
]
