[project]
name = "adv-doc-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-documentintelligence==1.0.0b3",
    "azure-data-tables==12.5.0",
    "azure-identity==1.14.0",
    "azure-search-documents==11.4.0",
    "azure-storage-blob==12.17.0",
    "bayoo-docx==0.2.20",
    "chainlit==2.9.4",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.81",
    "langchain-openai==0.3.35",
    "openai==1.104.2",
    "python-dotenv==1.0.0",
]
